--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 chromedriver-autoinstaller==0.6.4
+et_xmlfile==2.0.0
 h11==0.14.0
 idna==3.10
-numpy==2.2.2
+numpy==1.26.4
+openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
@@ -15,6 +17,7 @@ python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
 selenium==4.28.1
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -27,4 +30,5 @@ tzdata==2025.1
 urllib3==2.3.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+wheel==0.45.1
 wsproto==1.2.0
